build/kubernetes/staging-aws/call/pod-routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: tone-inbound-call-pod-0
  namespace: staging
  labels:
    app: tone-inbound-call-worker
    environment: staging
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: tone-inbound-call-worker-0
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tone-inbound-call-pod-1
  namespace: staging
  labels:
    app: tone-inbound-call-worker
    environment: staging
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: tone-inbound-call-worker-1
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tone-inbound-call-pod-2
  namespace: staging
  labels:
    app: tone-inbound-call-worker
    environment: staging
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: tone-inbound-call-worker-2
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tone-inbound-call-pod-3
  namespace: staging
  labels:
    app: tone-inbound-call-worker
    environment: staging
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: tone-inbound-call-worker-3
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tone-inbound-call-pod-4
  namespace: staging
  labels:
    app: tone-inbound-call-worker
    environment: staging
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: tone-inbound-call-worker-4
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tone-inbound-call-pod-5
  namespace: staging
  labels:
    app: tone-inbound-call-worker
    environment: staging
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: tone-inbound-call-worker-5
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tone-inbound-call-pod-6
  namespace: staging
  labels:
    app: tone-inbound-call-worker
    environment: staging
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: tone-inbound-call-worker-6
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tone-inbound-call-pod-7
  namespace: staging
  labels:
    app: tone-inbound-call-worker
    environment: staging
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: tone-inbound-call-worker-7
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tone-inbound-call-pod-8
  namespace: staging
  labels:
    app: tone-inbound-call-worker
    environment: staging
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: tone-inbound-call-worker-8
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tone-inbound-call-pod-9
  namespace: staging
  labels:
    app: tone-inbound-call-worker
    environment: staging
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: tone-inbound-call-worker-9
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
